[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gui/ModeControlPanel.gd" type="Script" id=1]
[ext_resource path="res://Gui/SetupBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gui/MoveList.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gui/TableBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Gui/Chessopath.stylebox" type="StyleBox" id=5]

[node name="ModeControlPanel" type="TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = true
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="Setup" type="Tabs" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 1
scrolling_enabled = true
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="CenterContainer" type="CenterContainer" parent="Setup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="SetupBoard" parent="Setup/CenterContainer" index="0" instance=ExtResource( 2 )]

margin_left = 501.0
margin_top = 279.0
margin_right = 515.0
margin_bottom = 285.0

[node name="Training" type="Tabs" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
scrolling_enabled = true

[node name="MoveList" parent="Training" index="0" instance=ExtResource( 3 )]

[node name="Analyze" type="Tabs" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 1
scrolling_enabled = true
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Analyze" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="MoveList" parent="Analyze/HBoxContainer" index="0" instance=ExtResource( 3 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 194.0
margin_bottom = 564.0
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="TableBase" parent="Analyze/HBoxContainer" index="1" instance=ExtResource( 4 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_right = 306.0
margin_bottom = 564.0

[node name="Database" type="Tabs" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 1
scrolling_enabled = true
_sections_unfolded = [ "Size Flags" ]

[node name="CenterContainer" type="CenterContainer" parent="Database" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="PanelContainer" type="PanelContainer" parent="Database/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 255.0
margin_top = 158.0
margin_right = 761.0
margin_bottom = 406.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 5 )
_sections_unfolded = [ "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Database/CenterContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 3.0
margin_right = 503.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="Database/CenterContainer/PanelContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "List of positions"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="databaseList" type="ItemList" parent="Database/CenterContainer/PanelContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 500.0
margin_bottom = 218.0
rect_min_size = Vector2( 500, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Rect" ]

[node name="CC1" type="CenterContainer" parent="Database/CenterContainer/PanelContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 222.0
margin_right = 500.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Database/CenterContainer/PanelContainer/VBoxContainer/CC1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_right = 324.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Clear" type="Button" parent="Database/CenterContainer/PanelContainer/VBoxContainer/CC1/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 44.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear"
flat = false
align = 1

[node name="Delete" type="Button" parent="Database/CenterContainer/PanelContainer/VBoxContainer/CC1/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 103.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Delete"
flat = false
align = 1

[node name="Load" type="Button" parent="Database/CenterContainer/PanelContainer/VBoxContainer/CC1/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 107.0
margin_right = 149.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[connection signal="tab_changed" from="." to="." method="_on_ModeControlPanel_tab_changed"]

[connection signal="cleal_board" from="Setup/CenterContainer/SetupBoard" to="." method="_on_SetupBoard_cleal_board"]

[connection signal="init_pos" from="Setup/CenterContainer/SetupBoard" to="." method="_on_SetupBoard_init_pos"]


